# spectrum_server

./: .dockerignore  .drone.yml  .gitignore  500.html  Dockerfile  README.md  docker-compose.yml  load_cities.py  manage.py  pyproject.toml  pytest.ini  select.py
apps/: conftest.py
apps/data/: admin.py  apps.py  conftest.py  enums.py  models.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py  views_reports.py  wagtail_hooks.py
apps/events/: admin.py  apps.py  conftest.py  models.py  reports.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
apps/importer/: 2gis_import.py  apps.py  importer.py  serializers.py  services.py  services_data.py  tests.py  urls.py  views.py
apps/log_app/: admin.py  (+6 more)
cassettes/: test_dgis_record_coords_on_save.yaml  test_export_events.yaml  test_filter_events.yaml  test_get_coords_in_map_graph.yaml  test_graph.yaml  test_import_excel_file_events.yaml  test_import_excel_file_events_same_file.yaml  test_import_force_insert.yaml  test_import_less_columns.yaml  test_import_more_columns.yaml  test_list_events.yaml  test_list_events_filter_datetime.yaml  test_list_events_filter_same_field_for_checkbox.yaml  test_list_events_multi_filter.yaml  test_list_events_multi_filter_pagination.yaml  test_list_events_pagination.yaml  test_list_events_search.yaml  test_list_events_search_2.yaml  test_list_events_single_filter.yaml  test_report_events.yaml  test_suggestions_for_fields.yaml  test_typos.yaml  test_typos_cells.yaml  test_update_event.yaml
data_files/: cities.csv  regions_01032023.csv
data_import/: 2gis_import.py
docker/: entrypoint.sh
main/: __init__.py  celery_config.py  middleware.py  pagination.py  urls.py  validators.py  wsgi.py
scripts/: backup_restore.py
sql/: chz_csv_import.sql
utils/: email.py  file_storage.py  info.py  logger.py  random.py  redis.py  test.py  text_format.py  vcr.py
(+147 files in other folders)
